--- a/src/index.template.html
+++ b/src/index.template.html
@@ -37,6 +37,7 @@
       href="icons/favicon-16x16.png"
     />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+    <script src="https://cdn.jwplayer.com/libraries/qofscDvY.js"></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
